/*
 * Copyright 2018 The Feast Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package feast.specs;

option java_package = "feast.specs";
option java_outer_classname = "StorageSpecProto";
option go_package = "github.com/gojektech/feast/protos/generated/go/feast/specs";

message StorageSpec {
  // unique identifier for this instance
  string id = 1;

  // type should define what sort of store it is
  // e.g. redis, bigquery, etc
  string type = 2;

  // options contain (but are not restricted to) options like
  // connection information.
  map<string,string> options = 3;
}
